# Agentic_AI_Learn

./: README.md  main.py
Chroma_DB/: README.md  app.py  vector_stores.py
FastAPI_Telusko/: database.py  database_models.py  main.py  models.py
RAG_FCC/: README.md  document_loader.py  main.py  pyproject.toml  raw_emb.py  raw_emb_ollama.py  trial.py  uv_path.md
